# Required initializer
AC_INIT

# Automake initialization
AM_INIT_AUTOMAKE(cwinux, 1.0)
m4_include([../../ax_cxx_compile_stdcxx_0x.m4])

# Add a test for a compiler.
AC_PROG_CC
AM_PROG_LIBTOOL
AX_CXX_COMPILE_STDCXX_0X
if test "x$ax_cv_cxx_compile_cxx0x_cxx" = "xyes" ; then
    CXXFLAGS="$CXXFLAGS -std=c++0x"
fi


AC_DEFUN([LIBEVENT_DIR],[

    AC_ARG_WITH(
        cwinux,
        [  --with-cwinux[=DIR]        cwinux directory],
        ,
        [with_cwinux="no"]
    )

    if test "$with_cwinux" = "no"; then
        AC_MSG_ERROR( You need to specify the cwinux directory using --with-cwinux)
    else
        # make sure that a well known include file exists
        if test -e $with_cwinux/include/app/CwxAppFramework.h; then
            cwinux_dir=$with_cwinux
            AC_MSG_RESULT(cwinux found!)
        else
            AC_MSG_ERROR( $with_cwinux not found.  Check the value you specified with --with-cwinux)
        fi
    fi
    AC_ARG_WITH(
        thrift,
        [  --with-thrift[=DIR]        thrift directory],
        ,
        [with_thrift="no"]
    )

    if test "$with_thrift" = "no"; then
        AC_MSG_ERROR( You need to specify the thrift directory using --with-thrift)
    else
        # make sure that a well known include file exists
        if test -e $with_thrift/Thrift.h; then
            thrift_dir=$with_thrift
            AC_MSG_RESULT(thrift found!)
        else
            AC_MSG_ERROR( $with_thrift not found.  Check the value you specified with --with-thrift)
        fi
    fi

])

LIBEVENT_DIR

AC_DEFINE(_LARGEFILE64_SOURCE)
AC_DEFINE(_FILE_OFFSET_BITS,64)
AC_DEFINE(_LARGEFILE64_SOURCE)
AC_DEFINE(_REENTRANT)
AC_DEFINE(_GNU_SOURC)
AC_DEFINE(WITH_CWINUX_THRIFT)


# The AC_SUBST macro causes the variable to be saved in config.status
AC_SUBST(cwinux_dir)
AC_SUBST(thrift_dir)

# Write config.status and the Makefile
AC_OUTPUT(Makefile)
AC_OUTPUT(echo_svr/Makefile)
AC_OUTPUT(echo_client/Makefile)
