## This is the shared library to be built
lib_LTLIBRARIES = libmod_cwinux.la

## Define the source file for the module
libmod_cwinux_la_SOURCES = cwx_stream.c cwx_package.c mod_cwinux.c

## Define that an include directory is required.
INCLUDES = -I@apache_dir@/include -I@apr_dir@/include/apr-1 -I@apr_util_dir@/include/apr-1

