# Required initializer
AC_INIT

# Automake initialization
AM_INIT_AUTOMAKE(mod_tut1, 1.0)

# Add a test for a compiler.
AC_PROG_CC
AM_PROG_LIBTOOL

# Define a macro that is used to parse a --with-apache parameter
# The macro is named "APACHE_DIR"
AC_DEFUN([APACHE_DIR],[

	AC_ARG_WITH(
		apache,
		[  --with-apache[=DIR]     Apache server directory],
		,
		[with_apache="no"]
	)
    AC_ARG_WITH(
        apr,
        [  --with-apr[=DIR]        Apache apr directory],
        ,
        [with_apr="no"]
    )
    AC_ARG_WITH(
        apr_util,
        [  --with-apr-util[=DIR]   Apache apr-util directory],
        ,
        [with_apr_util="no"]
    )

	AC_MSG_CHECKING(for Apache directory)

	if test "$with_apache" = "no"; then
		AC_MSG_ERROR( You need to specify the apache directory using --with-apache)
	else
		# make sure that a well known include file exists
		if test -e $with_apache/include/httpd.h; then
			apache_dir=$with_apache
			AC_MSG_RESULT(APACHE found!)
		else
			AC_MSG_ERROR( $with_apache not found.  Check the value you specified with --with-apache)
		fi
	fi

    AC_MSG_CHECKING(for apr directory)

    if test "$with_apr" = "no"; then
        AC_MSG_ERROR( You need to specify the apr directory using --with-apr)
    else
        # make sure that a well known include file exists
        if test -e $with_apr/include/apr-1/apr.h; then
            apr_dir=$with_apr
            AC_MSG_RESULT(apr found!)
        else
            AC_MSG_ERROR( $with_apr not found.  Check the value you specified with --with-apr)
        fi
    fi
    if test "$with_apr_util" = "no"; then
        AC_MSG_ERROR( You need to specify the apr_util directory using --with-apr-util)
    else
        # make sure that a well known include file exists
        if test -e $with_apr_util/include/apr-1/apu.h; then
            apr_util_dir=$with_apr_util
            AC_MSG_RESULT(apr-util found!)
        else
            AC_MSG_ERROR( $with_apr_util not found.  Check the value you specified with --with-apr-util)
        fi
    fi

])

# Now call the APACHE_DIR macro that was just specified
APACHE_DIR
AC_DEFINE(_LARGEFILE64_SOURCE)

# Save the location of apache into the "apache_dir" variable.
# The AC_SUBST macro causes the variable to be saved in config.status
AC_SUBST(apache_dir)
AC_SUBST(apr_dir)
AC_SUBST(apr_util_dir)

# Write config.status and the Makefile
AC_OUTPUT(Makefile)
